<resources>
    <string name="app_name">PG Allocation System</string>

    <string name="button_name">LOGIN</string>
    <string name="button_canditatedetails">Candidate Details Management</string>
    <string name="button_roomallot">Room Allotment Management</string>
    <string name="button_addroomtype">Add Room Type </string>
    <string name="button_addroomcategory">Add Room Category </string>
    <string name="button_addroomdetails">Add Room Details </string>
    <string name="button_allotment">Allot Room </string>
    <string name="button_add">Add</string>
    <string name="button_update">Update</string>
    <string name="button_delete">Delete</string>
    <string name="button_submit">Submit</string>
    <string name="button_viewcandidates">View Candidate Details</string>
    <string name="button_viewfreeroom">View Free Rooms</string>
    <string name="menu_call">Call Now</string>
    <string name="menu_message">Message</string>

    <string name="title_activity_option">OptionActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">PG Allocation System</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_roomtype">Room Type Management</string>
    <string name="menu_roomcategory">Room Category Management</string>
    <string name="menu_roomdetails">Room details Management</string>
    <string name="menu_report">Report Management</string>
    <string name="menu_contact">Contact</string>

    <string name="textview_typeid">TypeID</string>
    <string name="textview_typename">TypeName</string>
    <string name="textview_roomid">RoomID</string>
    <string name="textview_noofrooms">NoOfRooms</string>
    <string name="textview_equippedwith">Equipped With</string>
    <string name="textview_monthlycharge">MonthlyCharge</string>
    <string name="textview_facilities">Facilities</string>
    <string name="textview_roomno">RoomNo</string>
    <string name="textview_status">Status</string>
    <string name="textview_noofcandidates">NoOfCandidate</string>
    <string name="textview_allotid">AllotId</string>
    <string name="textview_cid">Cid</string>
    <string name="textview_dateofallot">DateOfAllotment</string>
    <string name="textview_name">Name</string>
    <string name="textview_email">Email</string>
    <string name="textview_phoneno">PhoneNo</string>
    <string name="textview_address">Address</string>
    <string name="textview_gender">Gender</string>
    <string name="textview_age">Age</string>
    <string name="textview_profession">Profession</string>
    <string name="textview_collegename">CollegeName</string>
    <string name="textview_companyname">CompanyName</string>
    <string name="textview_alternateno">AlternatePhoneNo</string>

    <string-array name="status">
        <item>Free</item>
        <item>Busy</item>
    </string-array>
    <string-array name="typename">
        <item>Single</item>
        <item>Double</item>
    </string-array>


</resources>
