<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/menu_report"
        android:textColor="#FF9100"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button

        android:id="@+id/viewcandidatedeail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="140dp"
        android:background="@drawable/customa"
        android:text="@string/button_viewcandidates"
        android:textColor="@color/cardview_light_background"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/viewfreeroom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/customa"
        android:text="@string/button_viewfreeroom"
        android:textColor="@color/cardview_light_background"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>