<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RoomAllotment">
    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_span="2"
            android:textColor="#FF9100"
            android:layout_marginLeft="80dp"
            android:layout_weight="2"
            android:text="Room Allotment"
            android:textSize="30sp"
            android:textStyle="bold" />
    </TableRow>
    <TableRow
        android:layout_marginTop="50dp">
        <TextView android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/cardview_dark_background"
            android:textSize="22sp"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:text="@string/textview_allotid"/>
        <EditText
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:layout_marginRight="30dp"
            android:hint="Enter AllotID"
            android:id="@+id/allotid"
            />
    </TableRow>
    <TableRow>
        <TextView android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="22sp"
            android:gravity="center"
            android:textColor="@color/cardview_dark_background"
            android:layout_weight="1"
            android:text="@string/textview_cid"/>
        <Spinner
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:layout_marginRight="70dp"
            android:layout_width="wrap_content"
            android:textSize="22sp"
            android:layout_height="wrap_content"
            android:id="@+id/cidroomallot"
            />
    </TableRow>
    <TableRow>
        <TextView android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="22sp"
            android:gravity="center"
            android:textColor="@color/cardview_dark_background"
            android:layout_weight="1"
            android:text="@string/textview_roomid"/>
        <Spinner
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:textSize="22sp"
            android:layout_height="wrap_content"
            android:layout_marginRight="70dp"
            android:id="@+id/roomidroomallot"
            />
    </TableRow>
    <TableRow>
        <TextView android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="22sp"
            android:gravity="center"
            android:textColor="@color/cardview_dark_background"
            android:layout_weight="1"
            android:text="@string/textview_roomno"/>
        <Spinner
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:textSize="22sp"
            android:layout_marginRight="70dp"
            android:layout_height="wrap_content"
            android:id="@+id/roomnoroomallot"
            />
    </TableRow>
    <TableRow
        android:layout_marginTop="20dp">
        <TextView android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="22sp"
            android:gravity="center"
            android:textColor="@color/cardview_dark_background"
            android:text="@string/textview_dateofallot"/>

        <EditText

            android:id="@+id/txtdate"
            android:layout_width="81dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22dp"
            android:hint="Select Date"
            android:textColor="@color/cardview_dark_background"
            android:inputType="none"
            android:enabled="false"
            android:textSize="22sp" />

        <Button
            android:id="@+id/btndate"
            android:layout_width="29dp"
            android:layout_height="22dp"
            android:background="@drawable/ic_calendar" />
    </TableRow>

    <TableRow>
        <Button
            android:text="@string/button_allotment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_span="2"
            android:background="@drawable/customa"
            android:textStyle="bold"
            android:textColor="@color/cardview_light_background"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="85dp"
            android:id="@+id/btnallotroom"
            android:textSize="18sp"/>
    </TableRow>

</TableLayout>